# teams-optimizer

./: .gitignore  =2.52.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_UPDATE_GUIDE.md  FRONTEND_MAINTENANCE.md  LICENSE  README.md  TODO.md  auth.py  database.py  main.py  proyect_structure.txt  pyproject.toml  pytest.ini  requirements.txt  robots.txt  soccer_teams.db  team_optimizer.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  python-app.yml
app/: auth.py  database.py  main.py  schemas.py  team_optimizer.py
app/config/: config.py  llm.py  logging_config.py  settings.py
app/db/: database.py  database_utils.py  models.py  schemas.py
app/routes/: admin_routes.py  auth_routes.py  clubs_routes.py  groups_routes.py  (+3 more)
backend/: requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: add_email_confirmation_fields.py  add_timestamp_fields.py  create_database.py  create_sample_players.py  migrate_database.py  migrate_email_confirmed_to_integer.py  migrate_sqlite_to_postgres.py  migrate_to_v2_scale.py
static/: robots.txt  script.js  service-worker.js  sitemap.xml  style.css
templates/: 404.html  500.html  _created_teams.html  _domain_notice.html  _footer.html  _manual_teams.html  _modal.html  _modals.html  _navbar.html  _pwa_meta.html  _scale_selector.html  _sidebar.html  admin_dashboard.html  armar_equipos.html  base.html  clubs.html  email_confirmation_pending.html  forgot_password.html  formations.html  formations.js  index.html  index.html.backup  landing-page.html  login.html  players.html  players_v2.html  profile.html  reset_password.html  results.html  signup.html  test.html
tests/: conftest.py  main_test.py  test_auth.py  test_main.py  test_player.py
(+121 files in other folders)
