[project]
name = "teams-optimizer"
version = "0.1.0"
description = "Armar Equipos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.12",
    "pydantic[email]>=2.12.4",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "starlette>=0.49.3",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]
