[project]
name = "teams-optimizer"
version = "0.1.0"
description = "Armar Equipos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "sib-api-v3-sdk>=7.6.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.52.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that interact with external systems",
]
